--- a/HTML&CSS/task7/main.css
+++ b/HTML&CSS/task7/main.css
@@ -54,7 +54,7 @@ header .wrapper {
 
 
 .content .poster {
-  background: url(img/poster.png);
+  background: url(poster.png);
   height: 32rem;
   width: 100%;
   display: table; }
@@ -65,6 +65,7 @@ header .wrapper {
   vertical-align: middle;
   color: #fff;
   padding-left:10rem;
+  background:url(img/poster.png);
   }
 
 .posterWritting h1{
@@ -210,6 +211,9 @@ header .wrapper {
   vertical-align:middle;
   color:#FFF;
 }
+
+
+
 .topic p{
   font-size:2.5rem;
 }
@@ -270,16 +274,36 @@ header .wrapper {
 }
 .main .more_info .items{
   float:left;
-  margin:auto;
+  display:inline-block;
+  vertical-align:middle;;
   width:33.3%;
   height:26rem;
   text-align:center;
   background:#FD323D;
 
 }
+
+.main .more_info .items:after{
+  content:"";
+  display:inline-block;
+  height:100%;
+  vertical-align: middle;
+  width:0;
+}
+
 .more_info .items.white{
   background:#FFF;
 }
+
+
+.items .items-content{
+  display:inline-block;
+  vertical-align: middle;
+
+}
+
+
+
 
 .main .img_box{
   width:33.4%;
